[gd_scene load_steps=17 format=3 uid="uid://tkgp05hf7nga"]

[ext_resource type="Script" uid="uid://d2o4wyev03hfo" path="res://player/scripts/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://dv4v40i2gsuoj" path="res://player/states/idle.gd" id="2_rkbax"]
[ext_resource type="Texture2D" uid="uid://0s24qb5055tw" path="res://player/sprites/temp_player.png" id="2_yw30f"]
[ext_resource type="Script" uid="uid://b3wo0dd3ca7f7" path="res://player/states/run.gd" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://c1v0ce2e4ss21" path="res://player/states/jump.gd" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://cd462won4b775" path="res://player/states/fall.gd" id="6_boad6"]
[ext_resource type="Script" uid="uid://cmvcaroh1h4hy" path="res://player/states/crouch.gd" id="7_boad6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boad6"]
size = Vector2(20, 3)

[sub_resource type="Animation" id="Animation_rgyib"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2ieo8"]
resource_name = "crouch"
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "idle"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8t03j"]
resource_name = "jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.3, 0.6, 0.79999995),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgyib"]
_data = {
&"RESET": SubResource("Animation_rgyib"),
&"crouch": SubResource("Animation_2ieo8"),
&"idle": SubResource("Animation_boad6"),
&"jump": SubResource("Animation_8t03j"),
&"run": SubResource("Animation_hg6s5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_boad6"]
radius = 12.0
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rgyib"]
radius = 14.0
height = 32.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 3
floor_constant_speed = true
script = ExtResource("1_oul6g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -39)
texture = ExtResource("2_yw30f")
hframes = 16
vframes = 4

[node name="States" type="Node" parent="."]
unique_name_in_owner = true

[node name="Idle" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("2_rkbax")

[node name="Run" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("3_g1dw6")

[node name="Jump" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("5_g6k8r")

[node name="Fall" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("6_boad6")

[node name="Crouch" type="Node" parent="States"]
unique_name_in_owner = true
script = ExtResource("7_boad6")

[node name="State_Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -88.0
offset_right = 20.0
offset_bottom = -65.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
text = "状态"
horizontal_alignment = 1
vertical_alignment = 1

[node name="One_Way_Platform_ShapeCast" type="ShapeCast2D" parent="."]
position = Vector2(0, -1)
enabled = false
shape = SubResource("RectangleShape2D_boad6")
target_position = Vector2(0, 4)
max_results = 12
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rgyib")
}
autoplay = "idle"

[node name="CollisionStand" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("CapsuleShape2D_boad6")
debug_color = Color(0, 0.6, 0.69803923, 0.19607843)

[node name="CollisionCrouch" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_rgyib")
disabled = true
debug_color = Color(0, 0.6, 0.69803923, 0.19607843)
